--- a/arch/arm64/boot/dts/xilinx/zynqmp-adrv9009-zu11eg-revb-adrv2crr-fmc-revb-sync-fmcomms8-jesd204-fsm-multisom-primary.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-adrv9009-zu11eg-revb-adrv2crr-fmc-revb-sync-fmcomms8-jesd204-fsm-multisom-primary.dts
@@ -56,6 +56,7 @@
 	adi,pll1-clkin-frequencies = <0 122880000 0 38400000>;
 	adi,pll1-ref-prio-ctrl = <0x8D>; /* CLKIN1 -> CLKIN3 -> CLKIN0 -> CLKIN2 */
 	adi,pll1-ref-autorevert-enable;
+	adi,pll1-lcm-skip-recommendation;
 
 	adi,clkin3-buffer-mode = <0x05>;
 };
