--- a/arch/arm64/boot/dts/xilinx/zynqmp-adrv9009-zu11eg-revb-adrv2crr-fmc-revb-sync-fmcomms8-jesd204-fsm-multisom-primary.dts
+++ b/arch/arm64/boot/dts/xilinx/zynqmp-adrv9009-zu11eg-revb-adrv2crr-fmc-revb-sync-fmcomms8-jesd204-fsm-multisom-primary.dts
@@ -23,6 +23,7 @@
 		JESD204_FSM_STATE_CLK_SYNC_STAGE2
 		JESD204_FSM_STATE_CLK_SYNC_STAGE3
 		JESD204_FSM_STATE_LINK_SETUP
+		JESD204_FSM_STATE_OPT_SETUP_STAGE0
 		JESD204_FSM_STATE_OPT_SETUP_STAGE1
 		JESD204_FSM_STATE_OPT_SETUP_STAGE2
 		JESD204_FSM_STATE_OPT_SETUP_STAGE3
